# ShowCases_Magma_Luminous

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/certbot/: app.conf
detection/: hello.py  result.json
detection/pages/: document_recognition.py  handwriting.py  numbers.py
handwriting_detection/: demo.py  result.json
number_detection/: Dockerfile  extract_numbers.py  extract_numbers_frontend.py  result.json
